--- a/Makefile.PSP
+++ b/Makefile.PSP
@@ -1,8 +1,8 @@
 PSPSDK=$(shell psp-config --pspsdk-path)
 PSPDIR=$(shell psp-config --psp-prefix)
 TARGET = Neverball
-LIBS = -lphysfs -lpng -lz -ljpeg -lSDL -lSDL_ttf -lfreetype -lvorbisfile       \
-       -lvorbis -logg -lGL -lm -lpspaudio -lpspgu -lpspirkeyb -lpsppower       \
+LIBS = -lphysfs -lpng -lz -ljpeg -lSDL -lSDL_ttf -lfreetype                    \
+       -lvorbisidec -logg -lGL -lm -lpspaudio -lpspgu -lpspirkeyb -lpsppower   \
        -lpsphprm -lpsprtc -lpspvfpu -lc -lpsplibc
 CFLAGS = -O2 -Wall -G0 -g -I$(PSPDIR)/include/SDL -I./share -D__PSP__
 
@@ -79,8 +79,9 @@ OBJS =                \
 	ball/main.o
 	
 PSP_FW_VERSION = 500
-BUILD_PRX = 1
+BUILD_PRX = 0
 EXTRA_TARGETS = EBOOT.PBP
+PSP_LARGE_MEMORY=1
 PSP_EBOOT_TITLE = Neverball 1.5.4
 #PSP_EBOOT_ICON = icon0.png
 
