--- a/Makefile.PSP
+++ b/Makefile.PSP
@@ -1,10 +1,13 @@
 PSPSDK=$(shell psp-config --pspsdk-path)
 PSPDIR=$(shell psp-config --psp-prefix)
 TARGET = Neverball
-LIBS = -lphysfs -lpng -lz -ljpeg -lSDL -lSDL_ttf -lfreetype                    \
-       -lvorbisidec -logg -lGL -lm -lpspaudio -lpspgu -lpspirkeyb -lpsppower   \
-       -lpsphprm -lpsprtc -lpspfpu -lpspvfpu -lc -lpsplibc
-CFLAGS = -O2 -Wall -G0 -g -I$(PSPDIR)/include/SDL -I./share -D__PSP__
+LIBS = ./psp/lib/libphysfs.a ./psp/lib/libpng.a ./psp/lib/libz.a               \
+       ./psp/lib/libjpeg.a ./psp/lib/libSDL.a -lSDL_ttf -lfreetype             \
+       -lvorbisidec -logg -lm -lpspaudio -lpspgu ./psp/lib/libGL.a             \
+       -lpspirkeyb -lpsppower -lpsphprm -lpsprtc -lpspfpu -lpspvfpu
+       
+CFLAGS = -O2 -Wall -G0 -g -D__PSP__                                            \
+         -I./share -I./psp/include -I./psp/include/SDL
 
 USERDIR   := ./user
 DATADIR   := ./data
