--- a/Makefile.PSP
+++ b/Makefile.PSP
@@ -6,12 +6,16 @@ LIBS = ./psp/lib/libphysfs.a ./psp/lib/libpng.a ./psp/lib/libz.a               \
        -lvorbisidec -logg -lm -lpspaudio -lpspgu ./psp/lib/libGL.a             \
        -lpspirkeyb -lpsppower -lpsphprm -lpsprtc -lpspfpu -lpspvfpu
        
-CFLAGS = -O2 -Wall -G0 -g -D__PSP__                                            \
-         -I./share -I./psp/include -I./psp/include/SDL
-
 USERDIR   := ./user
 DATADIR   := ./data
 LOCALEDIR := ./locale
+
+CFLAGS = -O2 -Wall -G0 -g                                                      \
+         -D__PSP__                                                             \
+         -DCONFIG_USER=\"$(USERDIR)\"                                          \
+         -DCONFIG_DATA=\"$(DATADIR)\"                                          \
+         -DCONFIG_LOCALE=\"$(LOCALEDIR)\"                                      \
+         -I./share -I./psp/include -I./psp/include/SDL
 
 OBJS =                \
   share/lang.o        \
