--- a/Makefile.PSP
+++ b/Makefile.PSP
@@ -4,8 +4,8 @@ TARGET = Neverball
 LIBS = ./psp/lib/libphysfs.a ./psp/lib/libpng.a ./psp/lib/libz.a               \
        ./psp/lib/libjpeg.a ./psp/lib/libSDL.a ./psp/lib/libSDL_ttf.a           \
        ./psp/lib/libfreetype.a ./psp/lib/libvorbisidec.a ./psp/lib/libogg.a    \
-       ./psp/lib/libGL.a -lm -lpspaudio -lpspgu -lpspirkeyb -lpsppower         \
-       -lpsphprm -lpsprtc -lpspfpu -lpspvfpu
+       ./psp/lib/libGL.a ./psp/lib/libpspirkeyb.a -lm -lpspaudio -lpspgu       \
+       -lpsppower -lpsphprm -lpsprtc -lpspfpu -lpspvfpu
        
 USERDIR   := ./user
 DATADIR   := ./data
@@ -16,7 +16,7 @@ CFLAGS = -O2 -Wall -G0 -g                                                      \
          -DCONFIG_USER=\"$(USERDIR)\"                                          \
          -DCONFIG_DATA=\"$(DATADIR)\"                                          \
          -DCONFIG_LOCALE=\"$(LOCALEDIR)\"                                      \
-         -I./share -I./psp/include -I./psp/include/SDL
+         -I./psp/include/SDL -I./psp/include -I./share
 
 OBJS =                                                                         \
   share/lang.o                                                                 \
